--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,15 +58,15 @@
                         <!--<img class="media-object img-rounded" src="img/dogs.jpg">-->
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
                     </a>
-                    <!--<span th:text="${question.user.avatarUrl}"/>-->
+                    <span th:text="${question.user.avatarUrl}"/>
                 </div>
                 <div class="media-body">
-                    <!--记得mybatis的驼峰转换-->
+
                     <h4 class="media-heading" th:text="${question.title}"></h4>
                     <span th:text="${question.description}"></span>
                     <span class="text-desc"> <span th:text="${question.commentCount}"/>个回复
                         •<span th:text="${question.viewCount}"/>次浏览
-                        •<span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"/>
+                        •<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"/>
                     </span>
                 </div>
             </div>
